src/style/index.scss
@import "./normalize.scss";
@import "./reset.scss";
@import "./variables.scss";

#root {
  overflow: auto; // Prevent margin collapsing on body
}

html {
  font-size: 14px;
}

@media (min-width: 800px) {
  html {
    font-size: 16px;
  }
}

@media (min-width: 1000px) {
  html {
    font-size: 20px;
  }
}

body {
  background-color: white;
  font-weight: 400;
  color: $text-color-dark;
  min-height: 100vh;
  position: relative;
  background: url("../images/wormz.png") repeat;
  background-size: 200px auto;
}

body,
input,
textarea {
  font-family: $font-primary;
}

a.link {
  transition: 0.2s ease;
  color: #009aed;
}

a.link:visited {
  color: #009aed;
}

a.link:hover {
  color: #0080c5;
}
a.link:active {
  color: #0070ac;
}

.button {
  font-size: 1rem;
  color: white;
  background: #009aed;
  border: 0;
  padding: 0.5rem 1rem;
  border-radius: 2px;
  transition: 0.2s ease;
}

.button:disabled {
  background: #70a9c8;
  cursor: not-allowed;
}

.button:hover {
  background: #0080c5;
}

.button:active {
  background: #0070ac;
}

input[type="password"] {
  font-size: 1rem;
  border: 2px solid #c7c7c7;
  transition: border 0.2s ease;
  padding: 0.7rem;
  outline: 0;
  border-radius: 3px;
}
input[type="password"]:focus {
  border: 2px solid #009aed;
}

textarea {
  font-size: 1rem;
  border: 2px solid #c7c7c7;
  outline: 0;
  transition: border 0.2s ease;
  border-radius: 3px;
  padding: 0.5rem;
}

textarea:focus {
  border: 2px solid #009aed;
}

.thread {
  cursor: pointer;
  transition: border-color 0.2s ease;
  border-color: #dcdbd7;
}

.thread--active .question,
.thread--active .answer {
  border-color: #009aed;
}

.question,
.answer {
  background: #ffffff;
  border-radius: 2px;
  display: block;
  position: relative;
  padding: 2rem;
  border: 2px solid #dcdbd7;
  margin: 0 auto;
  text-align: left;
}

/* .answer::before {
  content: "";
  position: absolute;
  left: 0;
  top: 50%;
  width: 0;
  height: 0;
  transform: translate(-100%, -50%);
  border-style: solid;
  border-width: 10px 10px 10px 0;
  border-color: transparent white transparent transparent;
} */

.container {
  max-width: 800px;
  margin: 0 auto;
  padding: 2rem 2rem;
}

@media (min-width: 950px) {
  .container {
    padding: 2rem 0;
  }
}

